<resources>
    <string name="app_name">Wgu Student App</string>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="reminder">Reminder</string>
    <string name="status">Status</string>
    <string name="action_delete">Delete</string>
    <string name="test_data">Test Data</string>
    <string name="no_data_available">No Data Available</string>
    <string name="notification_message" formatted="false">Reminder! %s</string>
    <string name="take_picture">Take Picture</string>

    <string name="all_terms">All Terms</string>
    <string name="associated_term">Associated Term</string>
    <string name="term_title">Term Title</string>
    <string name="edit_term">Edit Term</string>
    <string name="add_term">Add Term</string>
    <string name="delete_term_message">Are you sure you want to delete this term? All associated courses, assessments, and notes will be deleted as well</string>

    <string name="all_courses">All Courses</string>
    <string name="associated_courses">Associated Courses</string>
    <string name="associated_course">Associated Course</string>
    <string name="course_title">Course Title</string>
    <string name="edit_course">Edit Course</string>
    <string name="add_course">Add Course</string>
    <string name="view_courses">View Courses</string>
    <string name="delete_course_message">Are you sure you want to delete this course? All associated notes and assessments will be deleted as well</string>
    <string name="no_courses_available">No courses available. Add a term from the main menu before adding courses</string>

    <string name="all_notes">All Notes</string>
    <string name="associated_notes">Associated Notes</string>
    <string name="notes">Notes</string>
    <string name="note_title">Note Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_note">Add Note</string>
    <string name="note_detail">Note Detail</string>
    <string name="note_picture">Note Picture</string>
    <string name="no_notes_available">No notes available. Add notes to a course first</string>
    <string name="delete_note_message">Are you sure you want to delete this note?</string>
    <string name="share_note">Share Note</string>

    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="mentor_phone_number">Mentor Phone</string>

    <string name="assessments">Assessments</string>
    <string name="all_assessments">All Assessments</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="no_assessments_available">No assessments available. Add an assessment to a course first</string>
    <string name="assessment_date">Assessment Date</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="add_assessment">Add Assessment</string>


</resources>
