<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/edit_text_note_name"
        android:inputType="textEmailSubject"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/note_title" />

    <EditText
        android:id="@+id/edit_text_note_detail"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_note_name"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large"
        android:hint="@string/note_detail" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:text="@string/take_picture"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_note_detail"/>

    <TextView
        android:id="@+id/label_note_associated_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:textAlignment="center"
        android:text="@string/associated_course"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintTop_toBottomOf="@+id/button_take_picture"/>

    <TextView
        android:id="@+id/tv_note_associated_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/associated_course"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/label_note_associated_course"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_associated_course" >

        <ImageView
            android:id="@+id/note_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:layout_editor_absoluteX="@dimen/margin_large"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_note_image_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_done"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>