<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_vertical">

        <ImageView
            style="@style/FormIconStyle"
            android:src="@drawable/ic_create" />

        <EditText
            android:id="@+id/edit_text_term_name"
            android:inputType="textEmailSubject"
            android:layout_height="67dp"
            android:layout_width="286dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/term_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_date_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_wrapper">

        <ImageView
            style="@style/FormIconStyle"
            android:src="@drawable/ic_event" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_term_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:focusable="false"
            android:focusableInTouchMode="false" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_term_start_date"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:hint="@string/start_date"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_date_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/start_date_wrapper">

        <ImageView
            style="@style/FormIconStyle"
            android:src="@drawable/ic_event"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_term_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:focusable="false"
            android:focusableInTouchMode="false" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_term_end_date"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:hint="@string/end_date" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/end_date_wrapper" >

        <LinearLayout
            android:id="@+id/button_courses_wrapper"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_courses_list"
                android:text="@string/all_courses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_add_course_wrapper"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_add_course"
                android:text="@string/add_course"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/label_courses"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/associated_courses"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/buttons_wrapper"  />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_courses_list_by_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/label_courses">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_done"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>