<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_medium"
        android:gravity="center_vertical">

        <ImageView
            style="@style/FormIconStyle"
            android:src="@drawable/ic_create" />

        <EditText
            android:id="@+id/edit_text_assessment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assessment_title"
            android:inputType="textEmailSubject" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginRight="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/title_wrapper">

        <ImageView
            style="@style/FormIconStyle"
            android:src="@drawable/ic_event" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_assessment_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_assessment_date"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:hint="@string/assessment_date" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminder_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/date_wrapper"
        android:layout_marginRight="@dimen/margin_medium"
        android:paddingLeft="58dp">

        <CheckBox
            android:id="@+id/cb_assessment_reminder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reminder"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assessment_type_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@+id/reminder_wrapper">

        <ImageView
            style="@style/FormIconStyle"
            android:src="@drawable/ic_filter_list" />

        <Spinner
            android:id="@+id/spinner_assessment_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_note_associated_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:textAlignment="center"
        android:text="@string/associated_course"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintTop_toBottomOf="@+id/assessment_type_wrapper"/>

    <TextView
        android:id="@+id/tv_note_associated_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/associated_course"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/label_note_associated_course"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_done"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>